--- a/op.yaml
+++ b/op.yaml
@@ -36,7 +36,7 @@ metadata:
   annotations:
 spec:
   rules:
-  - host: drone.local
+  - host: drone-local
     http:
       paths:
       - path: /
@@ -46,3 +46,18 @@ spec:
             name: drone
             port:
               number: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: drone-local
+  labels:
+    app: drone
+spec:
+  ports:
+  - port: 80
+    targetPort: 80
+  selector:
+    app.kubernetes.io/component: server
+    app.kubernetes.io/instance: drone
+    app.kubernetes.io/name: drone
