--- a/fstack.yaml
+++ b/fstack.yaml
@@ -29,6 +29,24 @@ spec:
             memory: 200Mi
         ports:
         - containerPort: 8000
+        readinessProbe:
+          httpGet:
+            path: /metrics
+            port: 8000
+          initialDelaySeconds: 1
+          periodSeconds: 1
+          timeoutSeconds: 2
+          failureThreshold: 5
+          successThreshold: 1
+        livenessProbe:
+          httpGet:
+            path: /metrics
+            port: 8000
+          initialDelaySeconds: 10
+          periodSeconds: 20
+          timeoutSeconds: 2
+          failureThreshold: 3
+          successThreshold: 1
 ---
 apiVersion: v1
 kind: Service
