--- a/fstack.yaml
+++ b/fstack.yaml
@@ -140,6 +140,24 @@ spec:
             memory: 100Mi
         ports:
         - containerPort: 80
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 2
+          periodSeconds: 1
+          timeoutSeconds: 2
+          failureThreshold: 5
+          successThreshold: 1
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 10
+          periodSeconds: 20
+          timeoutSeconds: 2
+          failureThreshold: 3
+          successThreshold: 1
 ---
 apiVersion: v1
 kind: Service
