--- a/fstack.yaml
+++ b/fstack.yaml
@@ -205,16 +205,61 @@ spec:
             port:
               number: 8000   # 后端 Service 的端口
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: redis-config
+  namespace: default
+data:
+  redis.conf: |
+    cluster-enabled yes
+    cluster-require-full-coverage no
+    cluster-node-timeout 5000
+    cluster-config-file /data/nodes.conf
+    cluster-migration-barrier 1
+    appendonly yes
+    protected-mode no
+    port 6379
+    requirepass password
+    masterauth password
+---
+# redis-service.yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis-service
+  namespace: default
+  labels:
+    app: redis
+spec:
+  clusterIP: None
+  ports:
+  - port: 6379
+    name: redis
+  - port: 16379
+    name: cluster
+  selector:
+    app: redis
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: redis-secret
+type: Opaque
+data:
+  password: cGFzc3dvcmQK
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: redis
+  namespace: default
 spec:
+  serviceName: redis-service
+  replicas: 6
   selector:
     matchLabels:
       app: redis
-  serviceName: "redis"
-  replicas: 1
   template:
     metadata:
       labels:
@@ -222,18 +267,45 @@ spec:
     spec:
       containers:
       - name: redis
-        image: redis:7-alpine
+        image: redis:7.0-alpine
+        command: ["redis-server"]
+        args: ["/etc/redis/redis.conf"]
         ports:
         - containerPort: 6379
+          name: client
+        - containerPort: 16379
+          name: cluster
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "100m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
         volumeMounts:
-        - name: redis-data
+        - name: redis-config
+          mountPath: /etc/redis
+        - name: redis-v
           mountPath: /data
-        command: ["redis-server", "--appendonly", "yes"]
+        env:
+        - name: REDIS_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: redis-secret
+              key: password
+      volumes:
+      - name: redis-config
+        configMap:
+          name: redis-config
+          items:
+          - key: redis.conf
+            path: redis.conf
   volumeClaimTemplates:
   - metadata:
-      name: redis-data
+      name: redis-v
     spec:
       accessModes: [ "ReadWriteOnce" ]
+      storageClassName: "standard" # 根据你的存储类调整
       resources:
         requests:
           storage: 1Gi
@@ -241,13 +313,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis
-  labels:
-    app: redis
+  name: redis-access
+  namespace: default
 spec:
   ports:
   - port: 6379
     targetPort: 6379
-  clusterIP: None  # Headless Service，保证网络标识稳定
   selector:
     app: redis
+  type: ClusterIP # 或 LoadBalancer/NodePort 如果需要外部访问
